objects/PMC_SS_SalesArea__c.object
<CustomObject>
    <description>Sales Area Object</description>
    <fields>
        <fullName>Entity_CNPJ__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Entity CNPJ</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_CPQ_MosaicLLP__c</fullName>
        <label>Mosaic LLP (deprecated)</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>PMC_SS_SalesOrganization__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1002</fullName>
                    <label>Mosaic Global Sales LLC</label>
                </value>
                <value>
                    <fullName>1003</fullName>
                    <label>Mosaic Crop Nutrition LLC</label>
                </value>
                <value>
                    <fullName>1004</fullName>
                    <label>Mosaic Fertilizer LLC</label>
                </value>
                <value>
                    <fullName>1005</fullName>
                    <label>Mosaic Potash Carlsbad In</label>
                </value>
                <value>
                    <fullName>1025</fullName>
                    <label>Tampa Port Services, LLC</label>
                </value>
                <value>
                    <fullName>1026</fullName>
                    <label>Mos Ag Innovation Sol,LLC</label>
                </value>
                <value>
                    <fullName>1030</fullName>
                    <label>Mosaic Sulphur Partners, LLC</label>
                </value>
                <value>
                    <fullName>2000</fullName>
                    <label>Mosaic CA Crop Nutrit, LP</label>
                </value>
                <value>
                    <fullName>2001</fullName>
                    <label>Mosaic Potash Colonsay UL</label>
                </value>
                <value>
                    <fullName>2002</fullName>
                    <label>Mosaic Potash Esterhazy</label>
                </value>
                <value>
                    <fullName>2003</fullName>
                    <label>Mosaic Canada ULC (BP)</label>
                </value>
                <value>
                    <fullName>4600</fullName>
                    <label>Mosaic Fertilizantes Ltd.</label>
                </value>
                <value>
                    <fullName>4620</fullName>
                    <label>Mosaic Fertz Paraguay SRL</label>
                </value>
                <value>
                    <fullName>4000</fullName>
                    <label>Mosaic Fertilizantes do B</label>
                </value>
                <value>
                    <fullName>4001</fullName>
                    <label>Fospar SA</label>
                </value>
                <value>
                    <fullName>4004</fullName>
                    <label>Mosaic Potássio Mineração</label>
                </value>
                <value>
                    <fullName>4005</fullName>
                    <label>Mosaic Fertilizantes P&amp;K</label>
                </value>
                <value>
                    <fullName>4680</fullName>
                    <label>Comp. Minera Miski Mayo</label>
                </value>
                <value>
                    <fullName>6000</fullName>
                    <label>Mosaic Fertilizers (QHD)</label>
                </value>
                <value>
                    <fullName>6001</fullName>
                    <label>Mosaic Fertilizers (YT)</label>
                </value>
                <value>
                    <fullName>6002</fullName>
                    <label>Mosaic Fertilizers (BJ)</label>
                </value>
                <value>
                    <fullName>6400</fullName>
                    <label>Mosaic Fertilizers (HK) L</label>
                </value>
                <value>
                    <fullName>6500</fullName>
                    <label>Mosaic India Private Ltd.</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_CPQ_SAPSalesOrganization__c</fullName>
        <description>Field to uniquely identify SAP Sales Organization</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>SAP Sales Organization</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>PMC_DH_SalesArea__c</fullName>
        <formula>TEXT(PMC_SS_SalesOrganization__c)&amp;&quot; &quot; &amp;  
CASE( TEXT(PMC_SS_Division__c),
					&quot;10&quot;,&quot;Domestic&quot;,
					&quot;20&quot;,&quot;Export&quot;,
					&quot;30&quot;,&quot;Intercompany&quot;,&quot;&quot;) &amp;&quot; &quot;
					&amp; CASE( TEXT(PMC_SS_DistributionChannel__c),
					&quot;0&quot;,&quot;Common&quot;,
					&quot;00&quot;,&quot;Common&quot;,
					&quot;&quot;)</formula>
        <label>Sales Area</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PMC_SS_DistributionChannel__c</fullName>
        <description>Specifies the Distribution Channel</description>
        <label>Distribution Channel</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>00</fullName>
                    <label>Common</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_Division__c</fullName>
        <description>Specifies the Division</description>
        <label>Division</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>10</fullName>
                    <label>Domestic</label>
                </value>
                <value>
                    <fullName>20</fullName>
                    <label>Export</label>
                </value>
                <value>
                    <fullName>30</fullName>
                    <label>Intercompany</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_EntityAddress__c</fullName>
        <description>This field is primarily created with the objective of capturing the address of the Mosaic Entity and to show it in the Contract Documents</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Entity Address</label>
        <type>Address</type>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesOffice__c</fullName>
        <description>States the Sales Office for the Account</description>
        <label>Sales Office</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>PMC_CPQ_SalesOffice</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>PMC_SS_SalesOrganization__c</fullName>
        <description>Specifies the Sales Organization</description>
        <label>Sales Organization</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fospar SA</fullName>
                </value>
                <value>
                    <fullName>Comp. Minera Miski Mayo</fullName>
                    <label>Minera Miski Mayo</label>
                </value>
                <value>
                    <fullName>Mos. Sulphur Partner</fullName>
                </value>
                <value>
                    <fullName>Mos Ag Innovation Sol,LLC</fullName>
                    <label>Mosaic Ag Innov Sol</label>
                </value>
                <value>
                    <fullName>Mosaic Potash Colonsay UL</fullName>
                    <label>Mosaic CA Colonsay</label>
                </value>
                <value>
                    <fullName>Mosaic CA Crop Nutrit, LP</fullName>
                    <label>Mosaic CA Crop Nutri</label>
                </value>
                <value>
                    <fullName>Mosaic Potash Esterhazy</fullName>
                    <label>Mosaic CA Esterhazy</label>
                </value>
                <value>
                    <fullName>Mosaic Canada ULC (BP)</fullName>
                    <label>Mosaic CA ULC (BP)</label>
                </value>
                <value>
                    <fullName>Mosaic Crop Nutrition LLC</fullName>
                    <label>Mosaic CN Fertilizer</label>
                </value>
                <value>
                    <fullName>Mosaic Fertilizers (HK) L</fullName>
                    <label>Mosaic Fert. (HK)</label>
                </value>
                <value>
                    <fullName>Mosaic Fertilizantes Ltd.</fullName>
                    <label>Mosaic Fert Bahamas</label>
                </value>
                <value>
                    <fullName>Mosaic Fertilizers (BJ)</fullName>
                    <label>Mosaic Fert BMF</label>
                </value>
                <value>
                    <fullName>Mosaic Fertilizantes do B</fullName>
                    <label>Mosaic Fert Brasil</label>
                </value>
                <value>
                    <fullName>Mosaic Fertilizer LLC</fullName>
                    <label>Mosaic Fertilizer</label>
                </value>
                <value>
                    <fullName>Mosaic Fertz Paraguay SRL</fullName>
                    <label>Mosaic Fert Paraguay</label>
                </value>
                <value>
                    <fullName>Mosaic Fertilizers (QHD)</fullName>
                    <label>Mosaic Fert QMF</label>
                </value>
                <value>
                    <fullName>Mosaic Fertilizers (YT)</fullName>
                    <label>Mosaic Fert YMF</label>
                </value>
                <value>
                    <fullName>Mosaic Global Sales LLC</fullName>
                    <label>Mosaic Global Sales</label>
                </value>
                <value>
                    <fullName>Mosaic India Private Ltd.</fullName>
                    <label>Mosaic India Pvt Ltd</label>
                </value>
                <value>
                    <fullName>Mosaic Potash Carlsbad In</fullName>
                    <label>Mosaic Potash Carlsb</label>
                </value>
                <value>
                    <fullName>Mosaic Potássio Mineração</fullName>
                    <label>Mosaic Potássio Mine</label>
                </value>
                <value>
                    <fullName>Tampa Port Services, LLC</fullName>
                    <label>Tampa Port Services</label>
                </value>
                <value>
                    <fullName>Mosaic Fertilizantes P&amp;K</fullName>
                    <label>Mosaic Fert P&amp;K</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Area</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>PMC_SS_SalesOrganization__c</columns>
        <columns>PMC_SS_Division__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Sales Area Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Areas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>